[metadata]
name = django-advanced-search
version = 1.0.0
description = Django admin mixin for advanced search inspired by sentry, github and discord search
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/sandbox-pokhara/django-advanced-search.git
author = Pradish Bijukchhe
author_email = pradishbijukchhe@gmail.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
python_requires = >=3
install_requires =
    Django
